maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:40: error: Unmatched closing brace '}' ignored here
}
^