maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
  
  // part du principe qu'on a un mur a gauche
  def keepHandOnSideWall() {
    gauche()
    if (!estFaceMur()) {avance(); sommeAngle+=1}
       // pas mur a gauche ? go
    else {droite() ; if (!estFaceMur()) {avance()}
         					  // pas mur en face ? go
        						else {droite() ; if (!estFaceMur()) {avance(); sommeAngle-=1}
                           						// pas mur a droite ?
           													  else {droite()}
                           						// va en arriere
}}}
  
  //---
  def isDirectionFree(dir:Direction):Boolean = {
    var directionBuggle : Direction = getDirection()
    var bool : Boolean = true
    setDirection(dir)
    bool = (!estFaceMur)
    setDirection(directionBuggle)
    return bool
  }
  
  //---
  var sommeAngle : Int = 0
  while (!estSurBiscuit) 
    while (getDirection()==Direction.NORTH && !estFaceMur() && !estSurBiscuit) 
    			{avance()}
    droite()
  	sommeAngle = -1
  	while (sommeAngle!=0 && !estSurBiscuit)
    			{keepHandOnSideWall()}
  }
  prendBiscuit()
}